--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,6 +2,13 @@
 
 @import './iconfont.css';
 
-body{
-    background-color: aqua;
-}
+body {
+    background-color: #f5f7f9;
+  }
+  
+  .page-nav-bar {
+    background-color: #3296fa;
+    .van-nav-bar__title {
+      color: #fff;
+    }
+  }
